Fixed spacing issue with navigational jump to other sections

--- a/template-2/assets/styles/main.css
+++ b/template-2/assets/styles/main.css
@@ -67,7 +67,7 @@ table {
 }
 
 .group {
-  padding-top: 90px;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 
